# sbp-backend

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.db.yml  generate_db_diagram.sh  generate_migrations.py  generate_schema_diagram.py  pyproject.toml  pytest.ini  requirements-dev.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-push-deploy.yml  check-migrations.yml  lint.yml  release-please.yml  test-coverage.yml
alembic/: env.py
alembic/versions/: 20260119_000001_initial_schema.py  20260127_101200_rename_constraints_to_match_naming_9a0a3098c22f.py  20260127_101230_change_auth0_user_id_to_text_acd29f674da4.py  20260218_120000_add_binder_name_to_workflow_runs.py  20260218_160000_add_sample_id_to_workflow_runs.py  20260218_170000_add_binder_name_to_workflow_runs.py  20260218_190000_add_final_design_count_to_workflow_runs.py  20260218_210000_move_final_design_count_to_run_metrics.py  20260223_130000_add_sample_id_and_final_design_count.py  20260223_140000_alter_work_dir_bigint_to_text.py  20260224_150000_merge_binder_heads.py  20260310_103000_add_submitted_form_data_to_workflow_runs.py  20260519_100000_add_last_login_ip_to_app_users.py  20260521_103256_add_last_login_ip_to_app_users_91b54c7a79c5.py  20260528_000001_add_submission_timestamp_to_workflow_runs.py  20260528_154116__d12fe6111b4b.py  20260528_173006_add_submission_timestamp_to_workflow__0405f3482868.py  20260601_000000_add_tool_to_workflow_runs.py  20260602_094001_add_and_backfill_tool_on_workflow_runs_797ec472e447.py  20260602_094001_add_tool_to_worklow_runs_797ec472e447.py  20260602_164743_add_config_path_to_workflows_3ef9d934712f.py  20260605_084658_add_credit_to_user_bb952ec7e01c.py  20260605_092755_add_credit_update_metatdata_to_users_60712a56f2c2.py  20260610_092046__cb2033051aca.py  20260619_145849_queued_job_table_b0568b4aebd0.py  20260619_154640_queued_job_table_8117c4e6e36e.py  20260626_000000_drop_seqera_dataset_id_from_workflow_runs.py  20260626_110024_drop_seqera_dataset_id_from_workflow__df9e54119fe9.py  20260702_104632_system_status_cache_5d4995c0bdca.py  20260702_144353_null_seqera_id_74ab4858580d.py  9a0a3098c22f_rename_constraints_to_match_naming_.py
app/: main.py  run_scheduler.py
app/auth/: validator.py
app/db/: __init__.py  admin.py
app/db/models/: __init__.py  core.py  job_queue.py  system_status.py
app/models/: core.py
app/routes/: admins.py  dependencies.py  fasta_upload.py  health.py  pdb_upload.py  results.py  s3_files.py  system_status.py  users.py  workflows.py
app/routes/workflow/: jobs.py  launch.py  placeholders.py  results.py
app/scheduler/: __init__.py  jobs.py
app/schemas/: health.py  workflows.py
app/services/: _nf_config.py  bindflow_config.py  bindflow_executor.py  credits.py  datasets.py  health.py  job_utils.py  launch_payloads.py  proteinfold_config.py  proteinfold_executor.py  results_utils.py  s3.py  seqera.py  seqera_client.py  seqera_errors.py  seqera_models.py  seqera_parsers.py  wisps_config.py  wisps_executor.py  workflow_config_fetcher.py
app/templates/admin/: system_status.html
db/: constraints.sql  indexes.sql  sample_queries.sql  sample_seed.sql  schema.sql
docs/: schema_diagram  seqera_db_design.md
scripts/: bootstrap.py
tests/: __init__.py  conftest.py  datagen.py  test_additional_coverage.py  test_auth_validator.py  test_db_admin.py  test_db_models.py  test_main.py  test_proteinfold_coverage.py  test_routes_admin_system_status.py  test_routes_dependencies.py  test_routes_fasta.py  test_routes_health_components.py  test_routes_jobs.py  test_routes_pdb.py  test_routes_results.py  test_routes_s3_files.py  test_routes_users.py  test_routes_workflow_jobs.py  test_routes_workflow_jobs_extra.py  test_routes_workflows.py  test_schemas.py  test_services_bindflow_config.py  test_services_datasets.py  test_services_health.py  test_services_job_utils.py  test_services_results_utils.py  test_services_s3.py  test_services_seqera.py  test_services_seqera_actions.py  test_services_seqera_client.py  test_services_seqera_describe.py  test_services_seqera_parsers.py  test_services_workflow_listing.py  test_wisps_coverage.py
tests/db/: test_db_admin.py  test_db_models.py  test_job_queue_models.py
