[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sbp-backend"
version = "1.0.0"
description = "Structural Biology Platform Backend API"
requires-python = ">=3.10"
dependencies = [
    "fastapi~=0.111",
    "uvicorn[standard]~=0.29",
    "python-dotenv~=1.0",
    "httpx~=0.27",
    "pydantic~=2.7",
    "boto3~=1.34",
    "python-multipart~=0.0.9",
    "SQLAlchemy~=2.0",
    "alembic~=1.13",
    "psycopg[binary]~=3.1",
    "cachetools~=5.3",
    "python-jose[cryptography]~=3.3",
    "starlette-admin~=0.14",
]

[tool.setuptools]
packages = ["app"]

[project.optional-dependencies]
dev = [
    "pytest~=8.3",
    "pytest-asyncio~=0.23",
    "pytest-cov~=4.1",
    "pytest-mock~=3.12",
    "httpx~=0.28",
    "coverage[toml]~=7.4",
    "ruff~=0.14",
    "black~=23.3",
    "mypy~=1.19",
    "polyfactory~=2.16",
    "respx~=0.21",
    "sqlalchemy-data-model-visualizer~=0.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # imported but unused
"tests/*" = ["B018", "PLR2004"]      # useless expression, magic value comparison

# Black configuration
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | build
  | dist
)/
'''

# MyPy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
