[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sbp-backend"
version = "1.0.0"
description = "Structural Biology Platform Backend API"
requires-python = ">=3.14, <3.15"
dependencies = [
    "fastapi~=0.137.2",
    "uvicorn[standard]~=0.49",
    "python-dotenv~=1.2",
    "httpx~=0.28",
    "pydantic~=2.13",
    "boto3~=1.43",
    "python-multipart~=0.0.9",
    "pyyaml~=6.0",
    "SQLAlchemy~=2.0",
    "alembic~=1.18",
    "psycopg[binary]~=3.1",
    "cachetools~=5.5",
    "python-jose[cryptography]~=3.5",
    "starlette-admin~=0.16",
    "unidecode~=1.3",
]

[tool.setuptools]
packages = ["app"]

[dependency-groups]
dev = [
    "boto3-stubs>=1.43.26",
    "pytest~=8.3",
    "pytest-asyncio~=0.23",
    "pytest-cov~=4.1",
    "pytest-mock~=3.12",
    "httpx~=0.28",
    "coverage[toml]~=7.4",
    "ruff~=0.14",
    "black~=26.5",
    "mypy~=1.19",
    "types-PyYAML~=6.0",
    "polyfactory~=2.16",
    "respx~=0.21",
    "click~=8.1",
    "sqlalchemy-data-model-visualizer~=0.1",
    "groovy-parser @ git+https://github.com/inab/python-groovy-parser.git@5e7f3a4e7dcc5fb2e186fe7ca30df260ce5efeb8",
    "faker>=40.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
    "app/db/admin.py",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # imported but unused
"tests/*" = ["B018", "PLR2004"]      # useless expression, magic value comparison

# Black configuration
[tool.black]
line-length = 100
target-version = ["py314"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | build
  | dist
)/
'''

# MyPy configuration
[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["app/db/admin.py"]

[[tool.mypy.overrides]]
module = ["app.db.admin"]
ignore_errors = true
